--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
 <script src="https://kit.fontawesome.com/f1bae23ac7.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="style.css?v=1">
+	<link rel="stylesheet" type="text/css" href="style.css?v=3">
 	<title>Weather the Day</title>
 
 </head>
@@ -21,17 +21,14 @@
 
 </div>
 		<div class="weatherPage">
-
+			<div class="screen">
 				<div class="container">
 					<div class="nameInfo">
 						<div class="name"><i class="fas fa-map-pin fa-2x"></i><h1 class="nameText"></h1></div>
 						<div class="date"></div>	
 					</div>
 
-					<div class="hamBurgerMenu">
-
-						<i class="fas fa-bars fa-3x"></i>
-					</div>
+					
 				</div>
 
 
@@ -50,32 +47,17 @@
 	<div class="saying">
 		
 	</div>
-
-	<div class="condo">
-		
-	</div>
 </div>
 
-		</div>
+<button class="more" onclick="tog();">Find more Weather!</button>
+
+
+</div>
+</div>
 	
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
-<script type="text/javascript" src="app.js?v=1"></script>
+<script type="text/javascript" src="app.js?v=2"></script>
 </html>
