--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
 <script src="https://kit.fontawesome.com/f1bae23ac7.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="style.css?v=3">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Weather the Day</title>
 
 </head>
 <body>
 
 <div class="form">
-	<h1>Where are You?</h1>
-		<div class="text"><i class="fas fa-map-marker-alt"></i><input class="city" type="text" name="city" placeholder="City"></div>
-		<div class="text"><i class="fas fa-map-marked"></i><input class="state" type="text" name="state" placeholder="State"></div>	
+	<h1>Find The Current Weather In Your City <span>(US)</span></h1>
+		<div class="text"><i class="fas fa-map-marker-alt"></i><input class="city" type="text" name="city" placeholder="City" oninput="checkPut();"></div>
+		<div class="text"><i class="fas fa-map-marked"></i><input class="state" type="text" name="state" placeholder="State" oninput="checkPut();"></div>	
 	<input class="button" type="submit" value="Find the Weather!">
 
 </div>
@@ -24,7 +24,7 @@
 			<div class="screen">
 				<div class="container">
 					<div class="nameInfo">
-						<div class="name"><i class="fas fa-map-pin fa-2x"></i><h1 class="nameText"></h1></div>
+						<div class="name"></div>
 						<div class="date"></div>	
 					</div>
 
@@ -37,7 +37,7 @@
 			<div class="midCont">
 				
 				<div class="img">
-					<img class="setImg" src="">
+					
 				</div>
 
 				<div class="temp"></div>
@@ -59,5 +59,5 @@
 
 
 </body>
-<script type="text/javascript" src="app.js?v=2"></script>
+<script type="text/javascript" src="app.js"></script>
 </html>
