added img for blog app project

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</div>-->
 			<div class="box">
 				<h1>Khalil McCall</h1>
-				<h2>Web Developer</h2>
+				<h2>SoftWare Developer</h2>
 				<button class="slide">View My Projects</button>
 			</div>
 			</div>
@@ -64,6 +64,11 @@
 <div class=" one pic">
 	<img src="realestate.png">
 	<div class="filter">Real Estate Website <a href="realestate/index.html" target="_BLANK">View Project</a></div>
+
+</div>
+<div class=" one pic">
+	<img src="bloggr.png">
+	<div class="filter">Blogger WebApp <a href="http://immense-fortress-83307.herokuapp.com/" target="_BLANK">View Project</a></div>
 
 </div>
 
