--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</div>-->
 			<div class="box">
 				<h1>Khalil McCall</h1>
-				<h2>SoftWare Developer</h2>
+				<h2>Software Developer</h2>
 				<button class="slide">View My Projects</button>
 			</div>
 			</div>
