--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </div>
 <div class=" one pic">
 	<img src="bloggr.png">
-	<div class="filter">Blogger WebApp <a href="http://immense-fortress-83307.herokuapp.com/" target="_BLANK">View Project</a></div>
+	<div class="filter">Blogger WebApp <a href="https://immense-fortress-83307.herokuapp.com/" target="_BLANK">View Project</a></div>
 
 </div>
 
