--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 </div>
 <div class=" one pic">
 	<img src="realestate.png">
-	<div class="filter">Real Estate Website <a href="realestate/index.html" target="_BLANK">View Project</a></div>
+	<div class="filter">Real Estate Website <a href="https://obscure-sands-42735.herokuapp.com/" target="_BLANK">View Project</a></div>
 
 </div>
 <div class=" one pic">
 	<img src="bloggr.png">
-	<div class="filter">Blogger WebApp <a href="http://immense-fortress-83307.herokuapp.com/" target="_BLANK">View Project</a></div>
+	<div class="filter">Blogger WebApp <a href="https://immense-fortress-83307.herokuapp.com/" target="_BLANK">View Project</a></div>
 
 </div>
 
