added task tracker img  to portfolio

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 </div>
 <div class=" one pic">
-	<img src="tasktracker.png">
+	<img src="task-tracker.png">
 	<div class="filter">Task Tracker <a href="https://dashboard.heroku.com/apps/serene-ocean-60292" target="_BLANK">View Project</a></div>
 
 </div>
